--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,17 @@
                 <artifactId>jbcrypt</artifactId>
                 <version>0.4</version>
             </dependency>
+            
+            <dependency>
+                <groupId>com.google.zxing</groupId>
+                <artifactId>core</artifactId>
+                <version>3.5.2</version>
+            </dependency>
+           <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.2</version>
+        </dependency>
     </dependencies>
 
     
